# beal-pipeline

./: .gitignore  README.md  config.yaml  pyproject.toml  verificar_estrutura.py
data/input/: samples.csv
legacy_proof/scripts/: make_zip.py
legacy_proof/src/beal_pipeline/: cli.py  config.py
legacy_proof/src/beal_pipeline/core/: congruences.py  pinch_height_radical.py
legacy_proof/src/beal_pipeline/utils/: logging.py  tablegen.py
legacy_proof/tests/: test_normalize.py  test_pinch.py  test_zsigmondy.py
scripts/: example_run.sh
spectral_proof_2025/: run_pipeline_e.py
spectral_proof_2025/core/: __init__.py  metrics.py
spectral_proof_2025/pipeline_e/: congruences.py  lte.py  mabc.py  pipeline_e.py  valuations.py  zsigmondy.py
spectral_proof_2025/simulation/: __init__.py  stress_test.py
spectral_proof_2025/visualization/: __init__.py  plot_proof.py
src/beal_pipeline/core/: beal_check.py  lte.py  normalize.py  zsigmondy.py
src/beal_pipeline/io/: loader.py  writer.py
src/beal_pipeline/utils/: hashing.py  timing.py
src/beal_pipeline/workflows/: run_pipeline.py
tests/: test_congruences.py  test_lte.py
